--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-MYMETA.*
-MANIFEST
+blib*
 Makefile
-blib
-pm_to_blib
+Makefile.old
+Build
+_build*
+pm_to_blib*
+*.tar.gz
+.lwpcookies
+Nagios-Poller-*
 cover_db
 .*.swp
-*.rpm
