Rename npoll -> nlma

--- a/rpm_files/etc/nlma.yml.dist
+++ b/rpm_files/etc/nlma.yml.dist
@@ -1,4 +1,4 @@
-# npoll.yml - Nagios Poller Configuration
+# nlma.yml - Nagios Agent Configuration
 #
 # !!! THIS IS A SAMPLE CONFIG; HACK TO TASTE !!!
 #
