ITM-2029 - Handle corrupt YAML files

--- a/t/data/config/bad-includes.yml
+++ b/t/data/config/bad-includes.yml
@@ -4,6 +4,8 @@ include:
     # no .yml on web...
   - inc/web
   - /etc/no/such/file.yml
+  - inc/notyaml.png
+  - inc/corrupt.yml
 ---
 cpu:
   command: dummy
